fixed problem with collapse button on the sidebar where the opacity wasn't being reset.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,6 +73,10 @@ img {
     opacity: 0.5;
 }
 
+.arrowButton:focus {
+    outline: 0;
+}
+
 .arrowButton img {
     height: 25px;
     width: 25px;
